ingress-nginx/ingress-deployment.yaml
apiVersion: apps/v1beta1
kind: Deployment
metadata:
  labels:
  name: ingress
spec:
  replicas: 1
  selector:
    matchLabels:
      name: ingress
  template:
    metadata:
      labels:
        name: ingress
    spec:
      containers:
        - name: ingress
          image: nginx
          ports:
           - containerPort: 80
